[package]
name = "qwos"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO migrate this to v. 11.7
bootloader = "=0.9"
spin = "0.5.2"
volatile = "=0.2.6"
x86_64 = "0.15.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33